Refactored the process of audio redirecting and audio devices handling.